--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/folder/index.html">
+<meta http-equiv="refresh" content="0; url=https://github.com/rodrisapiens/to-do-app/blob/main/to-do-app/public/index.html">
